css/globalStyles.css
/* ... */
@media screen and (min-width: 800px) {
	#divider {
		display: none;
		}
	a.mobile {
		display: none;
		}	
	}
@media screen and (max-width: 1260px) {
	#social-icons {
		text-align: center;
		}
	#icons {
		width: 100%;
		}
	}
@media screen and (min-width: 800px) and (max-width: 1019px) {
	.avatar {
		margin-top: 15px !important;
		}
	#profile-options {
		display: block;
		margin: 10px 0px;
		}
	#profile-options a {
		display: block;
		margin: 0 auto;
		}
	}
@media screen and (min-width: 800px) and (max-width: 1000px) {
	.product-cta {
		font-size: 12px;
		}
	}
@media screen and (min-width: 800px) and (max-width: 1237px) {
	.left, .right {
		width: 100%;
		margin-bottom: 10px;
		}
	}
@media screen and (min-width: 801px) and (max-width: 1000px) {
	.hero-btn {
		bottom: 10%;
		left: 6%;
		}
	}
@media screen and (min-width: 801px) and (max-width: 1045px) {
	#youtube-banner div.product-buttons a, #gas-relief div.product-buttons a, #share-tweet div.product-buttons a {
		width: 90%;
		}
	}
@media screen and (min-width: 1001px) and (max-width: 1350px) {
	.hero-btn {
		bottom: 15%;
		left: 6%;
		}
	}
@media screen and (min-width: 1001px) and (max-width: 1185px) {
	.product-cta {
		font-size:14px;
		}
	}
@media screen and (min-width: 1185px) and (max-width: 1293px) {
	.product-cta {
		font-size: 16px;
		}
	}
@media screen and (max-width: 1020px) {
	.profile-basics.desktop {
		text-align: center;
		}
	.avatar {
		display: block;
		position: relative;
		margin: 0 auto;
		}
	.img-wrap {
		margin-top: 10px;
		}
	#profile-options {
		text-align: center;
		width: 100%;
		}
	}
@media screen and (min-width: 800px) and (max-width: 1185px) {
	.redeem, .learn-more {
		display: block;
		margin: 0 auto;
		width: 75%;
		}
	.redeem {
		margin-bottom: 10px;
		}
	#write-review div.product-buttons a {
		width: 50%;
		}
	#submit-receipt div.product-buttons a, #friend-refer div.product-buttons a {
		width: 100%;
		}
	#symptoms div.product-buttons a {
		width: 80%;
		}
	#complete-now div.product-buttons a {
		width: 100%;
		}
	}
@media screen and (min-width: 1021px) and (max-width: 1330px) {
	#profile-options {
		margin-top: 5px;
		width: 55%;
		}
	#profile-options a {
		display: block;
		}
	.avatar {
		margin-top: 0px;
		}
	}
/*-----------FINAL CODE----------*/
#invite-friends div.product-buttons {
	vertical-align: top;
	padding-bottom: 10px;
	}
.invite-friends-input {
	display: inline-block;
	margin-left: 5px;
	padding-top: 5px;
	width: 30% !important;
	}
.invite-friends-input input {	
	border-radius: 25px !important;
	}
#invite-friends a {
	width: 25% !important;
	}
#invite-friends a.redeem {
	display: inline-block;
	background: #3460a1;
	border: 3px solid #3460a1;
	margin: 0px 5px 0px 5px;
	padding-left: 17px;
	padding-right: 17px;
	}
#invite-friends a.learn-more {
	display: inline-block;
	background: #149cd8;
	border: 3px solid #149cd8;
	margin: 0px 5px 0px 5px;
	}

@media screen and (max-width: 800px) {
	.nav-list a {
		padding: 0px;
		}
	}
@media screen and (max-width: 360px) {
	#left-side a.mobile, #point-history a.left, #point-history a.right {
		font-size: 11px;
		}
	.nav-list a {
		font-size: 10px !important;
		margin: 0 0.5% !important;
		}
	}

/* New Styles for SignUp V1 & V2 */
#content-wraper-2 div.columns {
	margin-bottom: 15px;
	}
#content-wraper-2 {
	width: 70%;
	float: left;
	color: #139cd8;
	font-weight: bold;
}
#content-wraper-2 p {
	margin-bottom: 1em;
}
/* Sign Up section */

#wrapper.sign-up-now {
	background-color: #86c3f3;
	border-radius: 0;
	width: 25%;
	float: right;
	position: relative;

}

#wrapper.sign-up-now h2 {
	color: white;
	font-size: 1.3em;
	font-weight: bold;
	padding: 14px;
}
.sign-up-now .sign-up-terms, .sign-up-now text {
	color: rgba(117, 117, 117, 0.97);
	font-weight: bold;
	display: inline-block;
	font-size: .9em;
}
.banner-pad {
	padding-bottom: 10px;
}

.item-info {
	min-height: 120px;
}
#profile-wraper.profile-container {
	width:25%;
	}
.required-field.popup:last-child {
	margin-top: -1em;
	margin-bottom:1em;
}
.required-field.popup.inline {
	display: inline;
	float: left;
	margin-right: 50px;
	}	
.required-field {
	color: red;
	font-size: 0.7em;
	font-weight: bold;
}
/* Heights for the divs below the bottom 3 images*/
@media screen and (max-width: 1295px) {
	.item-info {
		min-height: 100px;
	}
}
@media screen and (max-width: 1180px) {
	.item-info {
		min-height: 80px;
	}
}

@media screen and (max-width: 840px) {
	#wrapper.sign-up-now, #content-wraper-2 {
		width: 100%;
	}
	.input_field.col1, .input_field.col2 {
		width: 49%;
		display: inline-block;
		float: right;
	}
	.input_field.col1, .captcha_btn.col1 {
		float: left;
	}
	.captcha_btn.col1 {
		margin-right: 1em;
	}
	.input_field.col2 {
		float: right;
	}
	.required {
		display: none;
	}
	.required-field {
		display: none;
	}
	.dBlock-2 {
		clear: both;
	}
	.dBlock-2.col2 {
		padding-right: 1em;
		width: 50%;
		float: right;
		margin-bottom: 3em;
	}
	.dBlock-2.col2 input[type="checkbox"] {
		display: inline-block;
	}
	.thankYou {
		margin-top: 1em;
		margin-bottom: 0;
		clear:both;
	}
	.sign-up-now input[type="text"], .sign-up-now input[type="email"], .sign-up-now input[type="password"] {
		margin-bottom: .6em;
	}
}
@media screen and (max-width:640px) {
	.dBlock-2.col2 *{
		margin-top: -3.5em;
		padding-left: 1em;
		width: 45%;
		float: right;
	}
}

